mini-c.output
Terminale, die in Grammatik unbenutzt sind

    UNARY_MINUS


Zustand 16 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: line $end

    1 line: declarations statements

    2 declarations: ε
    3             | declarations declaration

    4 declaration: INT id
    5            | FLOAT id

    6 statements: ε
    7           | statements statement

    8 statement: id ASSIGN expr
    9          | expr

   10 expr: INUM
   11     | FNUM
   12     | id
   13     | expr PLUS expr
   14     | expr MINUS expr
   15     | expr MUL expr
   16     | expr DIV expr
   17     | LP expr RP
   18     | MINUS expr

   19 id: ID


Terminale und die Regeln, in denen sie verwendet werden

    $end (0) 0
    error (256)
    INUM <ival> (258) 10
    FNUM <fval> (259) 11
    ID <lexeme> (260) 19
    INT (261) 4
    FLOAT (262) 5
    PLUS (263) 13
    MINUS (264) 14 18
    MUL (265) 15
    DIV (266) 16
    LP (267) 17
    RP (268) 17
    ASSIGN (269) 8
    UNARY_MINUS (270)
    SIGN (271)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

    $accept (17)
        auf der linken Seite: 0
    line (18)
        auf der linken Seite: 1
        auf der rechten Seite: 0
    declarations (19)
        auf der linken Seite: 2 3
        auf der rechten Seite: 1 3
    declaration (20)
        auf der linken Seite: 4 5
        auf der rechten Seite: 3
    statements (21)
        auf der linken Seite: 6 7
        auf der rechten Seite: 1 7
    statement (22)
        auf der linken Seite: 8 9
        auf der rechten Seite: 7
    expr <expression> (23)
        auf der linken Seite: 10 11 12 13 14 15 16 17 18
        auf der rechten Seite: 8 9 13 14 15 16 17 18
    id <lexeme> (24)
        auf der linken Seite: 19
        auf der rechten Seite: 4 5 8 12


Zustand 0

    0 $accept: • line $end

    $default  reduziere mit Regel 2 (declarations)

    line          gehe zu Zustand 1 über
    declarations  gehe zu Zustand 2 über


Zustand 1

    0 $accept: line • $end

    $end  schiebe und gehe zu Zustand 3 über


Zustand 2

    1 line: declarations • statements
    3 declarations: declarations • declaration

    INT    schiebe und gehe zu Zustand 4 über
    FLOAT  schiebe und gehe zu Zustand 5 über

    $default  reduziere mit Regel 6 (statements)

    declaration  gehe zu Zustand 6 über
    statements   gehe zu Zustand 7 über


Zustand 3

    0 $accept: line $end •

    $default  annehmen


Zustand 4

    4 declaration: INT • id

    ID  schiebe und gehe zu Zustand 8 über

    id  gehe zu Zustand 9 über


Zustand 5

    5 declaration: FLOAT • id

    ID  schiebe und gehe zu Zustand 8 über

    id  gehe zu Zustand 10 über


Zustand 6

    3 declarations: declarations declaration •

    $default  reduziere mit Regel 3 (declarations)


Zustand 7

    1 line: declarations statements •
    7 statements: statements • statement

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    $default  reduziere mit Regel 1 (line)

    statement  gehe zu Zustand 15 über
    expr       gehe zu Zustand 16 über
    id         gehe zu Zustand 17 über


Zustand 8

   19 id: ID •

    $default  reduziere mit Regel 19 (id)


Zustand 9

    4 declaration: INT id •

    $default  reduziere mit Regel 4 (declaration)


Zustand 10

    5 declaration: FLOAT id •

    $default  reduziere mit Regel 5 (declaration)


Zustand 11

   10 expr: INUM •

    $default  reduziere mit Regel 10 (expr)


Zustand 12

   11 expr: FNUM •

    $default  reduziere mit Regel 11 (expr)


Zustand 13

   18 expr: MINUS • expr

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    expr  gehe zu Zustand 18 über
    id    gehe zu Zustand 19 über


Zustand 14

   17 expr: LP • expr RP

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    expr  gehe zu Zustand 20 über
    id    gehe zu Zustand 19 über


Zustand 15

    7 statements: statements statement •

    $default  reduziere mit Regel 7 (statements)


Zustand 16

    9 statement: expr •
   13 expr: expr • PLUS expr
   14     | expr • MINUS expr
   15     | expr • MUL expr
   16     | expr • DIV expr

    PLUS   schiebe und gehe zu Zustand 21 über
    MINUS  schiebe und gehe zu Zustand 22 über
    MUL    schiebe und gehe zu Zustand 23 über
    DIV    schiebe und gehe zu Zustand 24 über

    MINUS     [reduziere mit Regel 9 (statement)]
    $default  reduziere mit Regel 9 (statement)


Zustand 17

    8 statement: id • ASSIGN expr
   12 expr: id •

    ASSIGN  schiebe und gehe zu Zustand 25 über

    $default  reduziere mit Regel 12 (expr)


Zustand 18

   13 expr: expr • PLUS expr
   14     | expr • MINUS expr
   15     | expr • MUL expr
   16     | expr • DIV expr
   18     | MINUS expr •

    $default  reduziere mit Regel 18 (expr)


Zustand 19

   12 expr: id •

    $default  reduziere mit Regel 12 (expr)


Zustand 20

   13 expr: expr • PLUS expr
   14     | expr • MINUS expr
   15     | expr • MUL expr
   16     | expr • DIV expr
   17     | LP expr • RP

    PLUS   schiebe und gehe zu Zustand 21 über
    MINUS  schiebe und gehe zu Zustand 22 über
    MUL    schiebe und gehe zu Zustand 23 über
    DIV    schiebe und gehe zu Zustand 24 über
    RP     schiebe und gehe zu Zustand 26 über


Zustand 21

   13 expr: expr PLUS • expr

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    expr  gehe zu Zustand 27 über
    id    gehe zu Zustand 19 über


Zustand 22

   14 expr: expr MINUS • expr

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    expr  gehe zu Zustand 28 über
    id    gehe zu Zustand 19 über


Zustand 23

   15 expr: expr MUL • expr

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    expr  gehe zu Zustand 29 über
    id    gehe zu Zustand 19 über


Zustand 24

   16 expr: expr DIV • expr

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    expr  gehe zu Zustand 30 über
    id    gehe zu Zustand 19 über


Zustand 25

    8 statement: id ASSIGN • expr

    INUM   schiebe und gehe zu Zustand 11 über
    FNUM   schiebe und gehe zu Zustand 12 über
    ID     schiebe und gehe zu Zustand 8 über
    MINUS  schiebe und gehe zu Zustand 13 über
    LP     schiebe und gehe zu Zustand 14 über

    expr  gehe zu Zustand 31 über
    id    gehe zu Zustand 19 über


Zustand 26

   17 expr: LP expr RP •

    $default  reduziere mit Regel 17 (expr)


Zustand 27

   13 expr: expr • PLUS expr
   13     | expr PLUS expr •
   14     | expr • MINUS expr
   15     | expr • MUL expr
   16     | expr • DIV expr

    MUL  schiebe und gehe zu Zustand 23 über
    DIV  schiebe und gehe zu Zustand 24 über

    $default  reduziere mit Regel 13 (expr)


Zustand 28

   13 expr: expr • PLUS expr
   14     | expr • MINUS expr
   14     | expr MINUS expr •
   15     | expr • MUL expr
   16     | expr • DIV expr

    MUL  schiebe und gehe zu Zustand 23 über
    DIV  schiebe und gehe zu Zustand 24 über

    $default  reduziere mit Regel 14 (expr)


Zustand 29

   13 expr: expr • PLUS expr
   14     | expr • MINUS expr
   15     | expr • MUL expr
   15     | expr MUL expr •
   16     | expr • DIV expr

    $default  reduziere mit Regel 15 (expr)


Zustand 30

   13 expr: expr • PLUS expr
   14     | expr • MINUS expr
   15     | expr • MUL expr
   16     | expr • DIV expr
   16     | expr DIV expr •

    $default  reduziere mit Regel 16 (expr)


Zustand 31

    8 statement: id ASSIGN expr •
   13 expr: expr • PLUS expr
   14     | expr • MINUS expr
   15     | expr • MUL expr
   16     | expr • DIV expr

    PLUS   schiebe und gehe zu Zustand 21 über
    MINUS  schiebe und gehe zu Zustand 22 über
    MUL    schiebe und gehe zu Zustand 23 über
    DIV    schiebe und gehe zu Zustand 24 über

    $default  reduziere mit Regel 8 (statement)
